# health_up_worker

./: Dockerfile  Jenkinsfile  README.md  database.py  main.py  models.py  pyproject.toml  utils.py
agents/: appointment_agent.py  doctor_agent.py  manager_agent.py  owner_agent.py
services/: appointment.py  chat.py  contact.py  database.py  doctor.py  manager.py  media.py  messaging.py  office.py  owner.py  patient.py  speciality.py
