[project]
name = "health-up-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "kafka-python>=2.0.6",
  "minio>=7.2.15",
  "openai>=1.65.1",
  "psycopg2>=2.9.10",
  "pydantic-ai[logfire,ollama]>=0.0.36",
  "pydantic-ai-slim[openai]>=0.0.36",
  "python-dotenv>=1.0.1",
  "sqlalchemy-utils>=0.41.2",
  "sqlmodel>=0.0.23",
  "twilio>=9.4.6",
  "uuid7>=0.1.0",
  "ollama>=0.4.7",
  "pytz>=2025.1",
]
